2010-05-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/sun-calendar-event-dialog-attendees.js:
	(onNextSlot) removed the handling of the time range menu, which
	was removed. Moved the time range code into "initTimeRange".

	* src/calendar/base/content/calendar-task-tree.xml:
	(calendar-task-tree.mTaskTreeObserver.onAdditem)
	(calendar-task-tree.mTaskTreeObserver.onModifyitem): prevent
	GUI operations for items in calendars that should not appear in
	the today pane.

	* src/calendar/base/content/calendar-item-editing.js:
	(doTransaction): add an entry to the new global
	"gActiveOperations" dictionary when a transaction is in progress
	so that two transactions cannot occur concurrently on the same
	item.

2010-05-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-multiday-view.xml:
	(calendar-event-box.setEditableLabel) set the value of the
	location label if the item contains such a value.

	* src/calendar/base/content/calendar-view-core.xml:
	(calendar-editable-item.eventLocationLabel): new accessor that
	returns the new XUL:element representing the event location.
	(calendar-editable-item.startEditing)
	(calendar-editable-item.stopEditing): hide and show the new event
	location label.

	* src/calendar/base/content/sun-calendar-event-dialog-attendees.js:
	(onAccept): added code to prevent the closing of the window, check
	the freebusy of every attendee and prompt a conflict dialog if
	needed.

	* src/calendar/base/content/calendar-unifinder.js:
	(unifinderKeyPress): see below.

	* src/calendar/base/content/calendar-common-sets.js:
	(calendarController.doCommand): see below.

	* src/calendar/base/content/agenda-listbox.js:
	(agendaListbox.onKeyPress:) prompt a confirmation dialog before
	deleting events.

2010-05-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/sun-calendar-event-dialog-freebusy.xml:
	(freebusy-grid.setRange): new accessor that sets the lower and